src/snapshots/alma__parser__tests__test_expression__record-9.snap
---
source: src/parser.rs
assertion_line: 2942
expression: "parse(\"{ x = 5 }\")"
---
Input:

{ x = 5 }

Result:

{ 0:9
    x 2:3 :
        Float 5 6:7
}
