src/snapshots/alma__parser__tests__test_expression__record.snap
---
source: src/parser.rs
assertion_line: 2361
expression: "parse(\"{}\")"
---
Input:

{}

Result:

Node {
    start: Idx(
        0,
    ),
    end: Idx(
        1,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Record(
            [],
        ),
    },
}
