src/snapshots/alma__parser__tests__test_expression__record_update-4.snap
---
source: src/parser.rs
assertion_line: 3040
expression: "parse(\"{ r | x }\")"
---
Input:

{ r | x }

Result:

{ 0:9
    record:
        Identifier r 2:3 2:3
    |
        x 6:7 :
            Identifier x 6:7 6:7
}
