src/snapshots/alma__parser__tests__test_expression__record_update.snap
---
source: src/parser.rs
assertion_line: 2390
expression: "parse(\"{ 5 | x = 1 }\")"
---
Input:

{ 5 | x = 1 }

Result:

Node {
    start: Idx(
        0,
    ),
    end: Idx(
        6,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: RecordUpdate(
            Node {
                start: Idx(
                    1,
                ),
                end: Idx(
                    1,
                ),
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Float(
                        5.0,
                    ),
                },
            },
            [
                (
                    Node {
                        start: Idx(
                            3,
                        ),
                        end: Idx(
                            3,
                        ),
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    Node {
                        start: Idx(
                            5,
                        ),
                        end: Idx(
                            5,
                        ),
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                1.0,
                            ),
                        },
                    },
                ),
            ],
        ),
    },
}
