src/snapshots/alma__parser__tests__test_expression__shorthand_property_access_lambda-3.snap
---
source: src/parser.rs
assertion_line: 2957
expression: "parse(\"a .b\")"
---
Input:

a .b

Result:

FnCall 0:4
    fn:
        Identifier a 0:1 0:1
    args:
        PropertyAccessLambda 2:4 b 3:4
