src/snapshots/alma__parser__tests__test_expression__shorthand_property_access_lambda-4.snap
---
source: src/parser.rs
assertion_line: 2386
expression: "parse(\".a b\")"
---
Input:

.a b

Result:

Node {
    start: 0,
    end: 2,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: FnCall(
            Node {
                start: 0,
                end: 1,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: PropAccessLambda(
                        Node {
                            start: 1,
                            end: 1,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 1,
                                },
                            },
                        },
                    ),
                },
            },
            [
                Node {
                    start: 2,
                    end: 2,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Identifier(
                            None,
                            Identifier(
                                Node {
                                    start: 2,
                                    end: 2,
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 2,
                                        },
                                    },
                                },
                            ),
                        ),
                    },
                },
            ],
        ),
    },
}
