src/snapshots/alma__parser__tests__test_expression__single line body same indent.snap
---
source: src/parser.rs
assertion_line: 2086
expression: "parse(\"\\\nlet x = 1\nx\")"

---
Input:

let x = 1
x

Result:

Node {
    start: 0,
    end: 11,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Let(
            [
                Untyped(
                    Pattern(
                        Node {
                            start: 4,
                            end: 5,
                            line: 1,
                            column: 4,
                            value: Identifier(
                                Node {
                                    start: 4,
                                    end: 5,
                                    line: 1,
                                    column: 4,
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 1,
                                        },
                                    },
                                },
                            ),
                        },
                        Node {
                            start: 8,
                            end: 9,
                            line: 1,
                            column: 8,
                            value: Expression_ {
                                typ: RefCell {
                                    value: None,
                                },
                                expr: Float(
                                    1.0,
                                ),
                            },
                        },
                    ),
                ),
            ],
            Node {
                start: 10,
                end: 11,
                line: 2,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        None,
                        Identifier(
                            Node {
                                start: 10,
                                end: 11,
                                line: 2,
                                column: 0,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                        ),
                    ),
                },
            },
        ),
    },
}
