src/snapshots/alma__parser__tests__test_expression__snake_case_identifier.snap
---
source: src/parser.rs
assertion_line: 2154
expression: "parse(\"variable_one\")"
---
Input:

variable_one

Result:

Node {
    start: Index(
        0,
    ),
    end: Index(
        0,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Identifier(
            None,
            Identifier(
                Node {
                    start: Index(
                        0,
                    ),
                    end: Index(
                        0,
                    ),
                    value: Identifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ),
        ),
    },
}
