src/snapshots/alma__parser__tests__test_expression__special_chars_identifier.snap
---
source: src/parser.rs
assertion_line: 2191
expression: "parse(\"espaÆàʥñÑol\")"
---
Input:

espaÆàʥñÑol

Result:

Node {
    start: Index(
        0,
    ),
    end: Index(
        0,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Identifier {
            module: None,
            identifier: Identifier(
                Node {
                    start: Index(
                        0,
                    ),
                    end: Index(
                        0,
                    ),
                    value: Identifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ),
        },
    },
}
