src/snapshots/alma__parser__tests__test_expression__unary_operators-2.snap
---
source: src/parser.rs
assertion_line: 2212
expression: "parse(\"- 5\")"
---
Input:

- 5

Result:

Node {
    start: 0,
    end: 1,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Unary(
            Node {
                start: 0,
                end: 0,
                value: Minus,
            },
            Node {
                start: 1,
                end: 1,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Float(
                        5.0,
                    ),
                },
            },
        ),
    },
}
